devops/kuber/namespace.yml
kind: Namespace
apiVersion: v1
metadata:
  name: back-end
  labels:
    name: back-end
