devops/kuber/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: back-end-deployment
  namespace: back-end
spec:
  selector:
    matchLabels:
      app: back-end
  replicas: 1
  template:
    metadata:
      labels:
        app: back-end
    spec:
      containers:
        - name: back-end
          image: gcr.io/tsubaki-376414/back:<VERSION>
          imagePullPolicy: Always
          resources:
            limits:
              cpu: 400m
              memory: 400Mi
            requests:
              cpu: 200m
              memory: 200Mi
          ports:
            - containerPort: 80
              protocol: TCP
