devops/kuber/service.yml
apiVersion: v1
kind: Service
metadata:
  name: back-end-service
  namespace: back-end
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 5000
  selector:
    app: back-end
  type: LoadBalancer
