devops/kuber/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: back-end-ingress
  namespace: back-end
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "back-end-static-ip"
    kubernetes.io/ingress.allow-http: "true"
    kubernetes.io/ingress.class: "gce"
spec:
  defaultBackend:
    service:
      name: back-end-service
      port:
        number: 80
